# legislation-embeddings

./: .gitignore  README.md  pyproject.toml  scrapy.cfg  whitelist.py
.github/: dependabot.yml
.github/workflows/: default.yaml  dependabot-merge.yaml
src/: config.py  logging.py  vectorstore.py  xml.py
src/crawler/: settings.py
src/crawler/spiders/: legislation_spider.py
src/task/: label.py  outlier.py  processor.py  reducer.py  search.py  visualize.py
test/: test_config.py  test_xml.py
test/fixtures/: BILLS-117hres24rds.xml
test/task/: test_outlier.py  test_processor.py
